[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lfsd"
authors = [{name = "Panagiotis Karagiannis", email = "papalotis1@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "numpy",
    "asyncio_dgram",
    'uvloop ; platform_system != "Windows"',
    # pyvjoy but only on windows
    'pyvjoy ; platform_system == "Windows"',
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]